feat: Implement oder types
