# docs/swagger.json
@@ -340,15 +340,33 @@
         "handlers.BuyRequest": {
             "type": "object",
             "required": [
+                "orderType",
                 "quantity",
-                "stock_symbol"
+                "stockSymbol"
             ],
             "properties": {
-                "quantity": {
-                    "type": "integer"
+                "limitPrice": {
+                    "description": "Optional, for LIMIT orders",
+                    "type": "number"
                 },
-                "stock_symbol": {
+                "orderType": {
+                    "type": "string",
+                    "enum": [
+                        "MARKET",
+                        "LIMIT",
+                        "STOP"
+                    ]
+                },
+                "quantity": {
+                    "type": "integer",
+                    "minimum": 1
+                },
+                "stockSymbol": {
                     "type": "string"
+                },
+                "stopPrice": {
+                    "description": "Optional, for STOP orders",
+                    "type": "number"
                 }
             }
         },
@@ -435,15 +453,33 @@
         "handlers.SellRequest": {
             "type": "object",
             "required": [
+                "orderType",
                 "quantity",
-                "stock_symbol"
+                "stockSymbol"
             ],
             "properties": {
-                "quantity": {
-                    "type": "integer"
+                "limitPrice": {
+                    "description": "Optional, for LIMIT orders",
+                    "type": "number"
                 },
-                "stock_symbol": {
+                "orderType": {
+                    "type": "string",
+                    "enum": [
+                        "MARKET",
+                        "LIMIT",
+                        "STOP"
+                    ]
+                },
+                "quantity": {
+                    "type": "integer",
+                    "minimum": 1
+                },
+                "stockSymbol": {
                     "type": "string"
+                },
+                "stopPrice": {
+                    "description": "Optional, for STOP orders",
+                    "type": "number"
                 }
             }
         },
